# learnCS

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  HRCore.h  LICENSE  README.md  README_EN.md  ReadMe.md  merge_footer  merge_header  requirements.txt
LoadDLL/: AsDLL.h  LoadDLL.h  ReadMe.md  build.bat  dlltest.cpp  dlltest.h  main.cpp
builtin/: ReadMe.md  win.rc
builtin/other/: ace_warning.txt  help.txt  intpr_help.txt  version_mono.txt
doc/: LangExtension_202301.md  LangPatch_202301.md  Preprocessor_202301.md  footer.html  footer.tex  header.tex  mainpage.md  stylesheet.sty
docs/: CNAME
etc/GitStatGenerator/: statGenerator.py
examples/: custom_storage.cpp  example_01.cpp  example_02.cpp
inc/: ErrorNo.h  Exceptions.hpp  LinkedList.hpp  QImageMemory.hpp  QUtils.hpp  QmlExport.hpp  RNAMWorker.hpp  RNAMimage.hpp  StorageIF.hpp  Utils.hpp  Value.hpp  VirtualMMU.hpp  WrapperRNAM.hpp  WrapperTNAM.hpp  ZIF.hpp
inc/RNAM/: CommonUtil.hpp  Diagonal_Priority.h  Horizonal_Priority.h  incHead.h  sameblock.h
inc/TNAM/: TNAM.h  TNAM_types.h
lang/: parser.y  preproc.l  preproc.y  scanner.l
res/: embed.qrc
res/windres/: win.rc
src/: RNAMimage.cpp  WrapperRNAM.cpp  boolchain.cpp  main.cpp  parsererror.cpp
src/cpp/: DBWrapper.cpp  Entry.cpp
src/cpp/bindings/: dbWrapper_binding.cpp  xmldb_binding.cpp
src/cpp/inc/: DBWrapper.hpp  Entry.hpp  Storage.hpp  TrieFA.hpp  intkey.hpp  keyTypes.hpp
src/glue/: LinkedList.c  degeneracy_algorithm_cliques_A.c  degeneracy_algorithm_cliques_A.h  degeneracy_helper.c  degeneracy_helper.h  misc.c  misc.h
src/inc/: boolchain.hpp  cmdparser.hpp  common.h  driver.hpp  emitter.hpp  optimizer.hpp  scanner.h  symbols.hpp  translator.hpp  utils.hpp
src/interpreter/: interpreter.hpp  intpr_x86.cpp  standalone_x86.cpp
src/preproc/: defineTable.hpp  preprocDriver.hpp  prescanner.hpp
src/py/: dblpHandler.py  main.py  serviceWrapper.py  timeUtil.py
src/web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/web/public/: pageWorker.js
src/web/src/assets/: main.scss
src/web/src/components/: AttrDisplay.vue  AuthorCard.vue  AuthorInformation.vue  CoauthorCard.vue  EntryCard.vue  MiniSearch.vue  PageDisplay.vue  PageDisplayRaw.vue  maxCli.vue  top100list.vue  topics.vue
src/web/src/router/: index.js
src/web/src/utils/: api.js
src/web/src/views/: 404.vue  AuthorView.vue  EntryView.vue  HomeView.vue  SearchView.vue  StatView.vue
test/: bindingTest.py  break_test.smp  conditionCom.smp  cwork1.smp  exam4.smp  exam5.smp  parserTest.py  partialQueryTest.py  preproc.smp  queryBenchmark.py  randomEntryGen.py  repeat.smp  storage.cpp  tcmp.smp  test1.smp  test2.smp  test3.smp  test4.smp  test5.smp  test6.smp  test_division.cpp  test_expression.cpp  test_float.cpp  test_integer.cpp  test_linkedlist.cpp  test_output.cpp  test_vmmu.cpp  testcall.smp  testcmp.smp  tint_min.smp  trieTest.cpp
test/RNAM_test/: CMakeLists.txt  RNAM_cli.cpp  guiRnam.cpp  junkTimer.js  main.qml
test/TNAM_test/: CMakeLists.txt  a.zif  log.txt  main.cpp  main.qml
ui/: ComponentRNAM.qml  ComponentTNAM.qml  CustomTabButton.qml  ReadMe.md  calculator.cpp  calculator.h  gui  gui.cpp  gui.h  main.cpp  main.qml  resource.qrc  ui.adv.hpp  ui.easy.hpp
ui/handler/: app.js  taskMgr.js
